--- a/css/styles.css
+++ b/css/styles.css
@@ -59,20 +59,30 @@
 .slideshow-container {
   max-width: 1000px;
   position: relative;
-  margin: auto;
   align-items: center;
   background-color: azure;
 }
-.top-left-text{
-    color: rgb(248, 244, 244);
+.title{
+    margin-top: 50px;
+    width: 80%;
+    padding: 30px;
+    color: black;
+    font-weight: bold;
+    font-size: 40px;
+    font-family: 'Roboto', sans-serif;
+    
+  }
+
+.description {
+    margin-top: 50px;
+    width: 90%;
+    padding: 30px;
+    color: black;
     font-weight: bold;
     font-size: 25px;
     font-family: 'Roboto', sans-serif;
-    padding: 20px 10px;
-    position: absolute;
-    top: 90px;
-    left: 30px;
-  }
+    
+}
 
 /* Hide the images by default */
 .mySlides {
@@ -113,16 +123,6 @@
     flex-direction: row;
 }
 
-.description {
-    margin-top: 50px;
-    width: 80%;
-    padding: 30px;
-    color: black;
-    font-weight: bold;
-    font-size: 15px;
-    font-family: 'Roboto', sans-serif;
-    
-}
 
 /* Caption text */
 .text {
@@ -165,9 +165,10 @@
 }
 
 .slides_img {
-    height: 600px;
-    width: 600px;
-    align-items: center;
+    float: left;
+    width:  700px;
+    height: 700px;
+    object-fit: cover;
 
 }
 
