--- a/css/styles.css
+++ b/css/styles.css
@@ -55,12 +55,17 @@
 
   * {box-sizing:border-box}
 
-/* Slideshow container */
+.wrapper {
+    margin: 0 auto;
+    padding: 0 5%;
+  }
+
 .slideshow-container {
-  max-width: 1000px;
-  position: relative;
-  align-items: center;
-  background-color: azure;
+    height:auto;
+    max-width: 1000px;
+    position: relative;
+    align-items: center;
+    background-color: azure;
 }
 .title{
     margin-top: 50px;
@@ -75,8 +80,8 @@
 
 .description {
     margin-top: 50px;
-    width: 90%;
-    padding: 30px;
+    width: 100%;
+    padding: 20px;
     color: black;
     font-weight: bold;
     font-size: 25px;
@@ -91,18 +96,19 @@
 
 /* Next & previous buttons */
 .prev, .next {
-  cursor: pointer;
-  position: absolute;
-  top: 30%;
-  width: auto;
-  margin-top: -22px;
-  padding: 16px;
-  color: white;
-  font-weight: bold;
-  font-size: 18px;
-  transition: 0.6s ease;
-  border-radius: 0 3px 3px 0;
-  user-select: none;
+    display:flexbox;
+    cursor: pointer;
+    position: absolute;
+    top: 30%;
+    width: auto;
+    margin-top: -22px;
+    padding: 16px;
+    color: white;
+    font-weight: bold;
+    font-size: 18px;
+    transition: 0.6s ease;
+    border-radius: 0 3px 3px 0;
+    user-select: none;
 }
 
 
