--- a/css/styles.css
+++ b/css/styles.css
@@ -128,6 +128,39 @@
     display: flex;
     flex-direction: row;
 }
+.split_footer {
+    display: flex;
+    flex-direction: row;
+    padding: 10px;
+    width: 100%;
+    flex-wrap: wrap;
+    
+}
+
+.logo_size {
+    margin-left: 80px;
+    float: left;
+    width:  40px;
+    height: 40px;
+    object-fit: cover;
+}
+
+.promo_title {
+    margin-left: 80px;
+    width: 100%;
+    color: black;
+    font-weight: bold;
+    font-size: 18px;
+    font-family: 'Roboto', sans-serif;
+}
+.promo {
+    margin-left: 80px;
+    width: 100%;
+    color: black;
+    font-weight: bold;
+    font-size: 18px;
+    font-family: 'Roboto', sans-serif;
+}
 
 
 /* Caption text */
