--- a/css/styles.css
+++ b/css/styles.css
@@ -68,8 +68,8 @@
     background-color: azure;
 }
 .title{
+    background-color: #e6ffff;
     margin-top: 50px;
-    width: 80%;
     padding: 30px;
     color: black;
     font-weight: bold;
@@ -84,6 +84,7 @@
     padding: 20px;
     color: black;
     font-weight: bold;
+    background-color: #e6ffff;
     font-size: 25px;
     font-family: 'Roboto', sans-serif;
     
@@ -103,9 +104,9 @@
     width: auto;
     margin-top: -22px;
     padding: 16px;
-    color: white;
+    color: rgba(131, 120, 120, 0.815);
     font-weight: bold;
-    font-size: 18px;
+    font-size: 25px;
     transition: 0.6s ease;
     border-radius: 0 3px 3px 0;
     user-select: none;
@@ -138,7 +139,8 @@
 }
 
 .logo_size {
-    margin-left: 80px;
+    margin-left: 30px;
+    flex-wrap: wrap;
     float: left;
     width:  40px;
     height: 40px;
@@ -150,7 +152,7 @@
     width: 100%;
     color: black;
     font-weight: bold;
-    font-size: 18px;
+    font-size: 20px;
     font-family: 'Roboto', sans-serif;
 }
 .promo {
@@ -205,8 +207,8 @@
 
 .slides_img {
     float: left;
-    width:  700px;
-    height: 700px;
+    width:  600px;
+    height: 600px;
     object-fit: cover;
 
 }
