--- a/css/styles.css
+++ b/css/styles.css
@@ -63,6 +63,7 @@
 .slideshow-container {
     height:auto;
     max-width: 1000px;
+    margin-top: 50px;
     position: relative;
     align-items: center;
     background-color: azure;
@@ -70,6 +71,7 @@
 .title{
     background-color: #e6ffff;
     margin-top: 50px;
+    margin-left: 30px;
     padding: 30px;
     color: black;
     font-weight: bold;
@@ -80,6 +82,7 @@
 
 .description {
     margin-top: 50px;
+    margin-left: 30px;
     width: 100%;
     padding: 20px;
     color: black;
@@ -206,10 +209,12 @@
 }
 
 .slides_img {
+    border-radius: 5%;
     float: left;
     width:  600px;
     height: 600px;
     object-fit: cover;
+    box-shadow: 10px 10px 5px grey;
 
 }
 
