spacing and background conformity

--- a/css/styles.css
+++ b/css/styles.css
@@ -66,7 +66,7 @@
     margin-top: 50px;
     position: relative;
     align-items: center;
-    background-color: azure;
+    background-color: #e6ffff;
 }
 .title{
     background-color: #e6ffff;
@@ -138,6 +138,7 @@
     padding: 10px;
     width: 100%;
     flex-wrap: wrap;
+    margin-left: 90px;
     
 }
 
