--- a/css/styles.css
+++ b/css/styles.css
@@ -2,7 +2,7 @@
 .header {
     font-family: 'Roboto', sans-serif;
     overflow: hidden;
-    background-color: #5b036d;
+    background-color: blueviolet;
     padding: 20px 10px;
   }
   
@@ -93,6 +93,7 @@
     height: 600px;
     object-fit: cover;
     box-shadow: 10px 10px 5px grey;
+    margin-left: 30px;
 
 }
 
@@ -135,6 +136,14 @@
     display: flex;
     flex-direction: row;
 }
+
+.split_contact {
+    padding: 100px;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+
+}
 .split_footer {
     display: flex;
     flex-direction: row;
@@ -162,6 +171,27 @@
     font-size: 20px;
     font-family: 'Roboto', sans-serif;
 }
+
+.title_contact {
+    margin-top: 50px;
+    text-align: center;
+    width: 100%;
+    color: black;
+    font-weight: bold;
+    font-size: 40px;
+    font-family: 'Roboto', sans-serif;
+}
+.send-button {
+    background-color: blueviolet;
+    margin-top: 50px;
+    text-align: center;
+    width: 20%;
+    color: white;
+    font-weight: bold;
+    font-size: 20px;
+    font-family: 'Roboto', sans-serif;
+
+}
 .promo {
     margin-left: 80px;
     width: 100%;
@@ -186,10 +216,42 @@
     font-family: 'Roboto', sans-serif;
 
 }
+.text_box {
+    padding: 12px 20px;
+    margin: 8px 0;
+    box-sizing: border-box;
+    border: 2px solid red;
+    border-radius: 4px;
+    font-size: 25px;
+    font-weight: bold;
+    color: black;
+    font-size: 15px;
+    padding: 8px 12px;
+    bottom: 8px;
+    margin-top: 30px;
+    text-align: center;
+    font-family: 'Roboto', sans-serif;
+
+}
+
+.text_box_question {
+    margin: 8px 0;
+    box-sizing: border-box;
+    border: 2px solid red;
+    border-radius: 4px;
+    font-weight: bold;
+    color: black;
+    font-size: 15px;
+    padding: 30px 70px;
+    bottom: 8px;
+    margin-top: 30px;
+    text-align: center;
+    font-family: 'Roboto', sans-serif;
+}
 
 /* Number text (1/3 etc) */
 .numbertext {
-  color: #f2f2f2;
+  color: black;
   font-size: 12px;
   padding: 8px 12px;
   position: absolute;
