--- a/css/styles.css
+++ b/css/styles.css
@@ -142,6 +142,15 @@
     text-align: center;
     display: flex;
     flex-direction: column;
+    font-size: 25px;
+    font-weight: bold;
+    color: black;
+    font-size: 15px;
+    padding: 8px 12px;
+    bottom: 8px;
+    margin-bottom: 30px;
+    text-align: center;
+    font-family: 'Roboto', sans-serif;
 
 }
 .split_footer {
@@ -220,7 +229,7 @@
     padding: 12px 20px;
     margin: 8px 0;
     box-sizing: border-box;
-    border: 2px solid red;
+    border: 2px solid blueviolet;
     border-radius: 4px;
     font-size: 25px;
     font-weight: bold;
@@ -228,7 +237,7 @@
     font-size: 15px;
     padding: 8px 12px;
     bottom: 8px;
-    margin-top: 30px;
+    margin-bottom: 30px;
     text-align: center;
     font-family: 'Roboto', sans-serif;
 
@@ -237,14 +246,14 @@
 .text_box_question {
     margin: 8px 0;
     box-sizing: border-box;
-    border: 2px solid red;
+    border: 2px solid blueviolet;
     border-radius: 4px;
     font-weight: bold;
     color: black;
     font-size: 15px;
     padding: 30px 70px;
     bottom: 8px;
-    margin-top: 30px;
+    margin-bottom: 30px;
     text-align: center;
     font-family: 'Roboto', sans-serif;
 }
