--- a/css/styles.css
+++ b/css/styles.css
@@ -225,6 +225,32 @@
     font-family: 'Roboto', sans-serif;
 
 }
+
+.thank {
+    display: flex;
+    flex-direction: column;
+    font-size: 50px;
+    font-weight: bold;
+    color: black;
+    padding: 8px 12px;
+    position: absolute;
+    width: 100%;
+    margin-top: 80px;
+    text-align: center;
+    font-family: 'Roboto', sans-serif;
+}
+
+.message {
+    font-size: 20px;
+    font-weight: bold;
+    color: black;
+    padding: 8px 12px;
+    position: absolute;
+    width: 100%;
+    margin-top: 40px;
+    text-align: center;
+    font-family: 'Roboto', sans-serif;
+}
 .text_box {
     padding: 12px 20px;
     margin: 8px 0;
