--- a/css/styles.css
+++ b/css/styles.css
@@ -131,7 +131,16 @@
 .prev:hover, .next:hover {
   background-color: rgba(0,0,0,0.8);
 }
-
+/* 
+.banner_image {
+    width: 80%;
+    height: 160px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    border-radius: 10%;
+     */
+/* } */
 .split {
     display: flex;
     flex-direction: row;
@@ -156,11 +165,41 @@
 .split_footer {
     display: flex;
     flex-direction: row;
-    padding: 70px;
+    margin-left: auto;
+    margin-right: auto;
     width: 100%;
-    flex-wrap: wrap;
-    margin-left: 90px;
     
+}
+.split_banner {
+    display: flex;
+    flex-direction: row;
+    width:100%;
+    background-color: rgb(75, 42, 105);
+    height: 70px;
+    margin-left: auto;
+    margin-right: auto;
+    width: 100%;
+    align-items: center;
+    text-align: center;
+}
+
+.icon {
+    margin-inline-start: 20px;
+    width:  40px;
+    height: 40px;
+    object-fit: contain;
+    text-align: center;
+    border-radius: 25%;
+    
+}
+
+.icon_text{
+    margin-left: 10px;
+    width: 100%;
+    color: white;
+    font-weight: bold;
+    font-size: 20px;
+    font-family: 'Roboto', sans-serif;
 }
 
 .logo_size {
