--- a/css/styles.css
+++ b/css/styles.css
@@ -409,7 +409,6 @@
   
   .container {
     background-color: #f2f2f2;
-    padding: 5px 20px 15px 20px;
     border: 1px solid lightgrey;
     border-radius: 3px;
   }
@@ -434,7 +433,7 @@
   }
   
   .btn {
-    background-color: #04AA6D;
+    background-color:blueviolet;
     color: white;
     padding: 12px;
     margin: 10px 0;
@@ -446,7 +445,7 @@
   }
   
   .btn:hover {
-    background-color: #45a049;
+    background-color: rgba(137, 43, 226, 0.438);
   }
   
   span.price {
@@ -471,7 +470,7 @@ body {font-family: Verdana, sans-serif;}
 .month {
   padding: 70px 25px;
   width: 100%;
-  background: #1abc9c;
+  background: blueviolet;
   text-align: center;
 }
 
@@ -528,7 +527,7 @@ body {font-family: Verdana, sans-serif;}
 
 .days li .active {
   padding: 5px;
-  background: #1abc9c;
+  background: blueviolet;
   color: white !important
 }
 
